--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
           <h2 class="visually-hidden">Test</h2>
           <ul class="features-list">
             <li class="features-item">
+              <div class="features-container">
+                <svg class="features-picture" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +84,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-container">
+                <svg class="features-picture" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +96,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-container">
+                <svg class="features-picture" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands with the strongest digital growth
@@ -93,6 +108,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-container">
+                <svg class="features-picture" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
