--- a/index.html
+++ b/index.html
@@ -475,6 +475,42 @@
           digital marketing & growth solutions.
         </p>
       </div>
+      <div class="footer-social-container">
+        <p class="footer-social-title">Social media</p>
+
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="">
+              <svg class="footer-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="">
+              <svg class="footer-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="">
+              <svg class="footer-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="footer-social-item">
+            <a class="footer-social-link" href=""></a>
+            <svg class="footer-social-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </li>
+        </ul>
+      </div>
     </footer>
     <!-- #endregion -->
   </body>
