--- a/index.html
+++ b/index.html
@@ -381,78 +381,120 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-1.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="info-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-1.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-text-section">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-dsr">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="info-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-text-section">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-dsr">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="info-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-text-section">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-dsr">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="info-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-text-section">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-dsr">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="info-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-text-section">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-dsr">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="info-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-text-section">
                 <h3 class="portfolio-name">Online Courses</h3>
                 <p class="portfolio-dsr">Marketing</p>
