--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                   <li class="team-socials-item">
                     <a
                       class="team-link"
+                      href=""
                       target="_blank"
                       rel="noopener noreferrer"
                     >
@@ -202,6 +203,7 @@
                 <ul class="team-socials-list">
                   <li class="team-socials-item">
                     <a
+                      href=""
                       class="team-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -263,6 +265,7 @@
                 <ul class="team-socials-list">
                   <li class="team-socials-item">
                     <a
+                      href=""
                       class="team-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -324,6 +327,7 @@
                 <ul class="team-socials-list">
                   <li class="team-socials-item">
                     <a
+                      href=""
                       class="team-link"
                       target="_blank"
                       rel="noopener noreferrer"
