--- a/index.html
+++ b/index.html
@@ -33,11 +33,16 @@
           <a href="./index.html" class="logo-header">
             Web<span class="logo-text-part-web">Studio</span>
           </a>
-
           <ul class="nav-list">
-            <li><a class="nav-items" href="./index.html">Studio</a></li>
-            <li><a class="nav-items" href="">Portfolio</a></li>
-            <li><a class="nav-items" href="">Contacts</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Portfolio </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Contacts </a>
+            </li>
           </ul>
         </nav>
 
